# microblog

./: .env.example  .gitattributes  .gitignore  .prospector.yaml  .travis.yml  README.md  app.db  config.py  microblog.py  pyproject.toml  tests.py
app/: __init__.py  cli.py  email.py  forms.py  models.py  routes.py  translate.py
app/auth/: email.py  forms.py  routes.py
app/main/: forms.py  routes.py
app/templates/: 404.html  500.html  _post.html  base.html  edit_profile.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html  user.html
app/templates/auth/: login.html
app/translations/es/LC_MESSAGES/: messages.po
migrations/versions/: 1e6370fa19ae_new_fields_in_user_model.py  5f4c78884424_add_language_to_posts.py  7ca004cb303a_posts_table.py  d9d083a0a654_followers.py  f9a9c741f0d6_users_table.py
tests/: tests.py
