[tool.poetry]
name = "microblog"
version = "0.1.0"
description = "Project from the 'The New and Improved Flask Mega-Tutorial' course."
authors = ["Anton Zdanov <azdanov@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.12.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
