[tool.poetry]
name = "microblog"
version = "0.1.0"
description = "Project from the 'The New and Improved Flask Mega-Tutorial' course."
authors = ["Anton Zdanov <azdanov@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
python-dotenv = "^0.10.3"
Flask-WTF = "^0.14.2"

[tool.poetry.dev-dependencies]
mypy = "^0.740"
prospector = "^1.1.7"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
